--- a/templates/app/candidats.html.twig
+++ b/templates/app/candidats.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}candidats{% endblock %}
 
 {% block body %}
     <div class="container">
