--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,3 +11,23 @@
 .btn_form {
     margin-top: 20px;
 }
+
+
+/*Le CSS pour quizzes.html.twig*/
+.tab_head {
+    background-color: #28a745;
+    color: white;
+}
+
+.list {
+    margin-top: 3em;  
+}
+
+a {
+    color: rgb(37, 37, 37);
+}
+.line :hover {
+    background-color: rgba(134, 175, 87, 0.377);
+}
+
+
