--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -37,7 +37,7 @@
                 </div>
             #}
 
-            <button class="btn btn-lg btn-primary btn_form" type="submit">
+            <button class="btn btn-lg btn-success btn_form" type="submit">
                 Sign in
             </button>
         </form>
